--- a/src/main/resources/templates/secure/view_merit_list.html
+++ b/src/main/resources/templates/secure/view_merit_list.html
@@ -68,7 +68,7 @@
                                     <th>Slno</th>
                                     <th>App No</th>
                                     <th>Name</th>
-                                    <th>Reservation</th>
+                                    <th>Category</th>
                                     <th>Ph</th>
                                     <th>Class Eight(%)</th>
                                     <th>Class Ten(%)</th>
@@ -101,7 +101,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body container">
-                    <h4 class="text-dark">Personal Details:</h4>
+                    <img class="img-thumbnail border border-dark" id="photoImage" src="" alt="Photograph" width="15%">
+                    <h4 class="text-dark mt-3">Personal Details:</h4>
                     <div class="row container mt-3 pb-5">
                         <div class="col-md-6">
                             <div class="form-group pb-3">
@@ -393,13 +394,15 @@ $(document).ready(function() {
                 targets: [5, 6, 7], // Indexes of columns to customize (0-based index)
             }
         ],
-        drawCallback: function(settings) {
-            var api = this.api();
-            var startIndex = api.context[0]._iDisplayStart;
-            api.column(0).nodes().each(function(cell, i) {
-                cell.innerHTML = startIndex + i + 1;
-            });
-        }
+       "rowCallback": function (row, data, index) {
+                        var api = this.api();
+                        var startIndex = api.context[0]._iDisplayStart;
+                        var pageSize = api.context[0]._iDisplayLength;
+                        var currentPage = Math.floor(startIndex / pageSize);
+                        var rowNumber = index + 1 + currentPage * pageSize;
+
+                        $('td:eq(0)', row).html(rowNumber);
+                    }
     });
 
     function populateCandidateTable(selectedITI, selectedTrade) {
@@ -540,7 +543,11 @@ $(document).ready(function() {
                 $("#maritalStatus").val(data.maritalStatus.maritalStatus);
                 $("#motherTongue").val(data.mothertongue);
                 $("#mobileNumber").val(data.mobilenumber);
-                $("#photograph").val(data.photograph);
+                if (data.photograph) {
+                    var photoImg = document.getElementById("photoImage");
+                    photoImg.src = "data:image/png;base64," + data.photograph;
+                    photoImg.alt = "Photograph"; // Add alt text for accessibility
+                }
                 $("#highestQualification").val(data.highestQualification.qualificationName);
                 $("#email").val(data.email);
                 $("#statePerm").val(data.states.name);
@@ -609,6 +616,11 @@ $(document).ready(function() {
     });
     }
 }
+
+
+
+
+
 
 
 
