--- a/src/main/resources/templates/secure/check_list.html
+++ b/src/main/resources/templates/secure/check_list.html
@@ -114,8 +114,10 @@
                     </h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
+
                 <div class="modal-body container">
-                    <h4 class="text-dark">Personal Details:</h4>
+                    <img class="img-thumbnail border border-dark" id="photoImage" src="" alt="Photograph" width="15%">
+                    <h4 class="text-dark mt-3">Personal Details:</h4>
                     <div class="row container mt-3 pb-5">
                         <div class="col-md-6">
                             <div class="form-group pb-3">
@@ -414,13 +416,15 @@ $(document).ready(function() {
                 targets: [5, 6, 7], // Indexes of columns to customize (0-based index)
             }
         ],
-        drawCallback: function(settings) {
-            var api = this.api();
-            var startIndex = api.context[0]._iDisplayStart;
-            api.column(0).nodes().each(function(cell, i) {
-                cell.innerHTML = startIndex + i + 1;
-            });
-        }
+        "rowCallback": function (row, data, index) {
+                        var api = this.api();
+                        var startIndex = api.context[0]._iDisplayStart;
+                        var pageSize = api.context[0]._iDisplayLength;
+                        var currentPage = Math.floor(startIndex / pageSize);
+                        var rowNumber = index + 1 + currentPage * pageSize;
+
+                        $('td:eq(0)', row).html(rowNumber);
+                    }
     });
 
 
@@ -559,7 +563,11 @@ $(document).ready(function() {
                 $("#maritalStatus").val(data.maritalStatus.maritalStatus);
                 $("#motherTongue").val(data.mothertongue);
                 $("#mobileNumber").val(data.mobilenumber);
-                $("#photograph").val(data.photograph);
+                if (data.photograph) {
+                    var photoImg = document.getElementById("photoImage");
+                    photoImg.src = "data:image/png;base64," + data.photograph;
+                    photoImg.alt = "Photograph"; // Add alt text for accessibility
+                }
                 $("#highestQualification").val(data.highestQualification.qualificationName);
                 $("#email").val(data.email);
                 $("#statePerm").val(data.states.name);
@@ -603,6 +611,24 @@ $(document).ready(function() {
             }
         });
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
