Removed DataTable manual sorting

--- a/src/main/resources/templates/secure/view_merit_list.html
+++ b/src/main/resources/templates/secure/view_merit_list.html
@@ -391,6 +391,10 @@ $(document).ready(function() {
         columnDefs: [
             // Column Definitions for customizations
             {
+                targets: '_all', // Targets all columns
+                orderable: false // Disable sorting
+            },
+            {
                 targets: [5, 6, 7], // Indexes of columns to customize (0-based index)
             }
         ],
@@ -616,6 +620,7 @@ $(document).ready(function() {
     });
     }
 }
+
 
 
 
