--- a/src/main/resources/templates/secure/check_list.html
+++ b/src/main/resources/templates/secure/check_list.html
@@ -68,10 +68,10 @@
                     <div class="row mt-5" style="display: none" id="tableContainer">
 
                         <div class="table-responsive">
-                            <div class="mb-3">
-                                <label for="counselingDateInput">Counselling Date: </label>
-                                <input type="date" class="form-control w-25" id="counselingDateInput">
-                            </div>
+                            <!--                            <div class="mb-3">-->
+                            <!--                                <label for="counselingDateInput">Counselling Date: </label>-->
+                            <!--                                <input type="date" class="form-control w-25" id="counselingDateInput">-->
+                            <!--                            </div>-->
 
 
                             <table id="zero_config"
@@ -352,14 +352,6 @@ $(document).ready(function() {
             {
                 extend: 'pdfHtml5',
                 customize: function(doc) {
-                    var counselingDate = document.getElementById('counselingDateInput').value;
-
-                    // Check if counseling date is not empty
-                    if (!counselingDate) {
-                        alert('Please enter a counseling date.');
-                        this.disable();
-                        return false; // Prevent PDF generation
-                    }
 
                     // Set page size to A4 landscape
                     doc.pageSize = 'A4';
@@ -371,7 +363,7 @@ $(document).ready(function() {
     // Add selected ITI and Trade as headings
     var selectedITI = $('#itiSelect option:selected').text();
     var selectedTrade = $('#tradeSelect option:selected').text();
-    var headings = 'Candidates Selected for Counselling \n\n' + selectedITI + '\nTrade: ' + selectedTrade + '\nCounseling Date: ' + counselingDate;
+    var headings = selectedITI + '\nTrade: ' + selectedTrade;
     doc.content.splice(0, 0, { text: headings, fontSize: 14, bold: true, margin: [0, 0, 0, 10] });
 
     // Update the serial number (slno) in the exported PDF
@@ -616,6 +608,14 @@ $(document).ready(function() {
             }
         });
     }
+
+
+
+
+
+
+
+
 
 
 
