--- a/src/main/resources/templates/secure/add_merit_list.html
+++ b/src/main/resources/templates/secure/add_merit_list.html
@@ -70,6 +70,11 @@
                                         <div class="col-sm-8">
                                             <div class="form-check form-check-inline">
                                                 <input class="form-check-input" type="radio" name="qualifyingCategory"
+                                                       id="qualifyingCategoryNA" value="N/A" checked>
+                                                <label class="form-check-label" for="qualifyingCategoryGEN">N/A</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input class="form-check-input" type="radio" name="qualifyingCategory"
                                                        id="qualifyingCategoryGEN" value="GEN">
                                                 <label class="form-check-label" for="qualifyingCategoryGEN">GEN</label>
                                             </div>
@@ -290,6 +295,8 @@ $(document).ready(function() {
 });
   });
 });
+
+
 
 
 
