--- a/src/main/resources/templates/secure/check_list.html
+++ b/src/main/resources/templates/secure/check_list.html
@@ -65,6 +65,13 @@
                         </form>
                     </div>
 
+                    <div id="loader" class="d-none"
+                         style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000;">
+                        <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+
                     <div class="row mt-5" style="display: none" id="tableContainer">
 
                         <div class="table-responsive">
@@ -86,6 +93,10 @@
                                     <th>Class Eight(%)</th>
                                     <th>Class Ten(%)</th>
                                     <th>Maths-Sci(%)</th>
+                                    <th>Phone</th>
+                                    <th>Email</th>
+                                    <th>DOB</th>
+                                    <th>Gender</th>
                                     <th>View</th>
                                 </tr>
                                 </thead>
@@ -355,7 +366,7 @@ $(document).ready(function() {
 
                     // Set page size to A4 landscape
                     doc.pageSize = 'A4';
-                    doc.pageOrientation = 'portrait';
+                    doc.pageOrientation = 'landscape';
 
                     // Remove the "exported data" heading
     doc.content.splice(0, 1);
@@ -364,7 +375,7 @@ $(document).ready(function() {
     var selectedITI = $('#itiSelect option:selected').text();
     var selectedTrade = $('#tradeSelect option:selected').text();
     var headings = selectedITI + '\nTrade: ' + selectedTrade;
-    doc.content.splice(0, 0, { text: headings, fontSize: 14, bold: true, margin: [0, 0, 0, 10] });
+    doc.content.splice(0, 0, { text: headings, fontSize: 12, bold: true, margin: [0, 0, 0, 10] });
 
     // Update the serial number (slno) in the exported PDF
                     var rowCount = doc.content[1].table.body.length;
@@ -389,7 +400,7 @@ $(document).ready(function() {
             if (cell) {
                 cell.alignment = 'center'; // Set cell alignment
                 cell.margin = [5, 5, 5, 5]; // Set cell margins
-                cell.fontSize = 10; // Set font size
+                cell.fontSize = 8; // Set font size
                 cell.bold = (row === 0); // Make header cells bold
             }
         }
@@ -399,9 +410,18 @@ $(document).ready(function() {
                     columns: ':visible:not(:last-child)'
                 }
             },
-            'copyHtml5',
-            'excelHtml5'
+           {
+                extend: 'excelHtml5',
+                customize: function(xlsx) {
+
+                },
+                exportOptions: {
+                    columns: ':visible:not(:last-child)'
+                }
+            },
+            'copyHtml5'
         ],
+
         columnDefs: [
             // Column Definitions for customizations
              {
@@ -425,6 +445,10 @@ $(document).ready(function() {
 
 
     function populateCandidateTable(selectedITI, selectedTrade) {
+
+        tableContainer.style.display = "none";
+        document.getElementById("loader").classList.remove("d-none");
+
         // Clear the table body
         table.clear().draw();
 
@@ -434,6 +458,7 @@ $(document).ready(function() {
             method: 'GET',
 
             success: function(response) {
+            document.getElementById("loader").classList.add("d-none");
             console.log(response);
 
             if (response && response.length > 0) {
@@ -498,6 +523,9 @@ $(document).ready(function() {
                 } else {
                     row.push(candidate.percentageeight, candidate.percentagetenth, candidate.percentage);
                 }
+                row.push(candidate.mobilenumber, candidate.email.toLowerCase());
+                row.push(candidate.dob,
+                        candidate.gender.genderName.toUpperCase());
                 row.push('<button onclick="abc(\'' + candidate.applicationnumber + '\')" class="btn btn-primary btn-sm view-edit" data-bs-toggle="modal" data-bs-target="#exampleModal">View</button>');
 
 
@@ -517,6 +545,7 @@ $(document).ready(function() {
             },
             error: function() {
                 console.error('Error fetching candidates.');
+                document.getElementById("loader").classList.add("d-none");
             }
         });
     }
@@ -608,6 +637,31 @@ $(document).ready(function() {
             }
         });
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
