--- a/src/main/resources/templates/secure/registration_list.html
+++ b/src/main/resources/templates/secure/registration_list.html
@@ -47,6 +47,11 @@
                             </div>
                         </form>
                     </div>
+                    <div id="loader" class="d-none" style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000;">
+                        <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
 
                     <div class="row mt-5" style="display: none" id="tableContainer">
 
@@ -571,6 +576,9 @@ $(document).ready(function() {
         table.order([1, 'asc']).draw();
 
     function populateCandidateTable(selectedITI, selectedTrade) {
+    tableContainer.style.display = "none";
+     document.getElementById("loader").classList.remove("d-none");
+
         // Clear the table body
         table.clear().draw();
 
@@ -580,6 +588,7 @@ $(document).ready(function() {
             url: 'getApplicationByCenterIdAndTradeId/' + selectedITI + '/' + selectedTrade,
             method: 'GET',
             success: function(response) {
+            document.getElementById("loader").classList.add("d-none");
             console.log(response);
             if (response && response.length > 0) {
                 // Process the response and populate the candidate table
@@ -608,6 +617,7 @@ $(document).ready(function() {
             },
             error: function() {
                 console.error('Error fetching candidates.');
+                document.getElementById("loader").classList.add("d-none");
             }
         });
     }
